@@ -70,8 +70,8 @@ public class TokenProvider implements Serializable {
     return (username.equals(userDetails.getUsername()) && !isTokenExpired(token));
   }
 
-  UsernamePasswordAuthenticationToken getAuthenticationToken(final String token,
-      final Authentication existingAuth, final UserDetails userDetails) {
+  UsernamePasswordAuthenticationToken getAuthenticationToken(final String token, 
+      final UserDetails userDetails) {
 
     final JwtParser jwtParser = Jwts.parser().setSigningKey(SIGNING_KEY);
 
@@ -81,7 +81,7 @@ public class TokenProvider implements Serializable {
 
     final Collection<? extends GrantedAuthority> authorities =
         Arrays.stream(claims.get(AUTHORITIES_KEY).toString().split(","))
-            .map(SimpleGrantedAuthority::new).collect(Collectors.toList());
+            .map(SimpleGrantedAuthority::new).toList();
 
     return new UsernamePasswordAuthenticationToken(userDetails, "", authorities);
   }
